test/sema/typeck/struct/type-params-missing.dora
struct Foo[T](Int32)
fn f(): Foo[Int32] { Foo(1i32) }
